--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,13 @@ body {
   background-color: red;
   color: white;
 }
+
+.btnBack {
+  background-color: #282c34;
+  color: white;
+}
+
+.btnGoTo {
+  background-color: #0dee58;
+  color: black;
+}
